2018-06-20  dana  <dana@dana.is>

	* 43061: Completion/Darwin/Command/_open,
	Completion/Unix/Command/_webbrowser: Improve open completion, adjust
	_webbrowser wording

	* 43060: Completion/Unix/Command/_stat,
	Completion/Zsh/Command/_stat: Expand stat completion

2018-06-18  dana  <dana@dana.is>

	* 43047: Completion/Unix/Command/_hostname: Add hostname completion

	* 43047: Completion/Unix/Type/_bind_addresses: Always return local IPs

2018-06-18  Peter Stephenson  <p.stephenson@samsung.com>

	* unposted: Test/V01zmodload.ztst: updated for 43039.

	* Eitan: 43029: Src/Modules/zftp.c, Src/signals.c, Src/signals.h,
	configure.ac: remove test for signal handler return type as no
	longer needed.

2018-06-18  Oliver Kiddle  <okiddle@yahoo.co.uk>

	* 43006: Tim Smith: Completion/Unix/Command/_git: complete
	modified files after `git stash --`

	* users/23484: Completion/Unix/Command/_git: be consistent on
	matcher specs for branches to fix issue with partial matching

	* 43048: Eitan: Completion/Unix/Command/_gcc: add sanitizers,
	standards aliases and fix -flto

2018-06-17  dana  <dana@dana.is>

	* 43043: Completion/Unix/Command/_comm,
	Completion/Unix/Command/_sed: Improve comm/sed completion

	* 43039: Src/Modules/parameter.mdd: Mark functions_source (et al.)
	for auto-loading

2018-06-16  dana  <dana@dana.is>

	* 43030: Functions/VCS_Info/Backends/VCS_INFO_get_data_bzr,
	Functions/VCS_Info/Backends/VCS_INFO_get_data_cvs,
	Functions/VCS_Info/Backends/VCS_INFO_get_data_svn,
	Functions/VCS_Info/Backends/VCS_INFO_get_data_tla,
	Functions/VCS_Info/VCS_INFO_bydir_detect,
	Functions/VCS_Info/VCS_INFO_realpath,
	Functions/VCS_Info/vcs_info: Replace VCS_INFO_realpath() by :P

	* 43031: Etc/completion-style-guide: Add note about quoting/escaping
	(cf. 42992)

	* 43031: Etc/completion-style-guide: Add note about optional/variant
	syntax (cf. 43025)

2018-06-15  dana  <dana@dana.is>

	* 43024: Completion/Unix/Command/_man: Improve section-name matching
